# python-appstoreconnect-analyticsreports

./: .gitignore  README.md  pyproject.toml  requests.flow.drawio  runner.ipynb  runner.py
src/surquest/utils/: requirements.txt
src/surquest/utils/appstoreconnect/: credentials.py
src/surquest/utils/appstoreconnect/analyticsreports/: client.py  errors.py  handler.py  logger.py
src/surquest/utils/appstoreconnect/analyticsreports/enums/: category.py  granularity.py  report_name.py
tests/: pytest.ini
tests/surquest/utils/: requirements.txt
tests/surquest/utils/appstoreconnect/: test_credentials.py
tests/surquest/utils/appstoreconnect/analyticsreports/: test_client.py  test_handler.py  test_logger.py
