[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surquest-appstoreconnect-analyticsreports"
version = "0.0.1rc1"
description = "Convenient interface to **download Analytics Reports** from the [App Store Connect API](https://developer.apple.com/documentation/appstoreconnectapi). It handles authentication using JWT, manages requests, and retrieves analytics data for app usage, sales, crashes, and more."
authors = [
    {name= "Michal Švarc", email= "michal.svarc@surquest.com"}
]
readme = "README.md"
dependencies = [
    "PyJWT>=2.10.1,<3.0",
    "requests>=2.32.4,<3.0",
    "cryptography>=45.0.5,<46.0",
]


[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
]

[project.urls]
"Homepage" = "https://github.com/surquest/python-appstoreconnect-analyticsreports"
"Bug Tracker" = "https://github.com/surquest/python-appstoreconnect-analyticsreports/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/surquest"]